# indra_cogex

./: .env.example  .flake8  .gitignore  .readthedocs.yaml  Dockerfile  LICENSE  MANIFEST.in  README.md  bdf.yaml  build_extra_indexes.sh  deployment.md  dump.sh  import.sh  pytest.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
docker/: Dockerfile
docs/: Makefile  requirements.txt
docs/source/: conf.py  enrichment_set_analysis.rst  index.rst  license.rst  requirements.txt
docs/source/modules/: index.rst  representation.rst
docs/source/modules/apps/: gla.rst  index.rst
docs/source/modules/assembly/: index.rst
docs/source/modules/client/: index.rst  neo4j_client.rst  queries.rst  subnetwork.rst
docs/source/modules/indexing/: cli.rst  index.rst  indexing.rst
docs/source/modules/sources/: bgee.rst  cbioportal.rst  cellmarker.rst  chembl.rst  clinicaltrials.rst  disgenet.rst  ec.rst  goa.rst  gwas.rst  hpoa.rst  index.rst  indra_db.rst  indra_ontology.rst  interpro.rst  nih_reporter.rst  pathways.rst  processor_util.rst  pubmed.rst  sider.rst  source_cli.rst  sources_processor.rst  wikidata.rst
notebooks/: Curation Summary.ipynb  Dark Genome.ipynb  Dark Phosphatases.ipynb  INDRA Database Summary.ipynb  INDRA2.ipynb  METSIM Metabolomics PheWeb Test Generator.ipynb  Rules.ipynb  Summary Queries.ipynb  TDC Exploration.ipynb  TNF Context Analysis.ipynb  all_sentences.txt  disease_associated_genes.ipynb  not_in_big.txt  pheweb_metsim_tests.tsv  relation_full.csv  relations.csv  sample_20.txt  spine.tsv
notebooks/beta_catenin_dou/: beta_catenin_dou.ipynb  protein_analysis_template.html  results.html
notebooks/beta_catenin_dou/analysis_output/: AMOT_statements.html  APCDD1_statements.html  CALML3_statements.html  CTNNA2_statements.html  CTNNB1_statements.html  DKK4_statements.html  FABP4_statements.html  GLCE_statements.html  LEF1_explanations.html  LEF1_statements.html  NOTUM_statements.html  TCF7L2_explanations.html  go_results_discrete.csv  indra_downstream_results_discrete.csv  indra_upstream_results_discrete.csv  phenotype_results_discrete.csv  reactome_results_discrete.csv  shared_go_terms.csv  shared_pathways.txt  shared_reactome.csv  shared_upstream.csv  shared_wikipathways.csv  wikipathways_results_discrete.csv
notebooks/exposures/: Pancreatic Cancer Exposures.ipynb  chemical_gene_disease.tsv  direct.tsv  genes.tsv
notebooks/go_analysis/: go_analysis.ipynb
notebooks/go_analysis/go_term_stmts_pkl/: hgnc:100, go:0016049_statements.pkl  hgnc:100, go:0016477_statements.pkl  hgnc:100, go:0019233_statements.pkl  hgnc:100, go:0030154_statements.pkl  hgnc:100, go:0033344_statements.pkl  hgnc:100, go:0042311_statements.pkl  hgnc:100, go:0046960_statements.pkl  hgnc:100, go:0061724_statements.pkl  hgnc:100, go:0090280_statements.pkl
notebooks/phosphoproteomics_geffen/: README.md  phosphoprot_explanation.ipynb
notes/: deployment.md
scripts/bnet/: INDRA Discovery Boolean network construction.ipynb
src/indra_cogex/: __init__.py  constants.py  info.py  io.py  neo4j_client.py  representation.py  util.py
src/indra_cogex/Analysis/: gene_blueprint.py  metabolite_blueprint.py
src/indra_cogex/analyses/: context_specificity_analysis.py
src/indra_cogex/analyses/devon/: Exploratory_query.csv  devon_analysis.py
src/indra_cogex/analysis/: CTNNB1.py  __init__.py  cli.py  example_gene_data.csv  gene_analysis.py  metabolite_analysis.py  protein_analysis.py  source_targets_explanation.py
src/indra_cogex/apps/: __init__.py  __main__.py  cli.py  constants.py  curator_blueprint.py  entity_app.py  proxies.py  rest_api.py  utils.py  wsgi.py
src/indra_cogex/apps/bioentity/: api.py
src/indra_cogex/apps/chat_page/: __init__.py  __main__.py  chat_app_setup.md  chat_blueprint.py  cli.py
src/indra_cogex/apps/curation_cache/: __init__.py  curation_cache.py
src/indra_cogex/apps/curator/: __init__.py  curation_cache.py  curator_blueprint.py  explorer_blueprint.py  utils.py
src/indra_cogex/apps/data_display/: __init__.py  __main__.py  cli.py  helpers.py
src/indra_cogex/apps/gla/: __init__.py  __main__.py  constants.py  fields.py  gene_blueprint.py  proxies.py  (+3 more)
src/indra_cogex/assembly/: __init__.py
src/indra_cogex/client/: __init__.py  curation.py  gene_list.py  gene_scores.py  neo4j_client.py  pagination.py  queries.py  signed_gene_list.py  subnetwork.py  utils.py
src/indra_cogex/indexing/: __init__.py  __main__.py  cli.py
src/indra_cogex/output/: __main__.py  network_search.py
src/indra_cogex/resources/: __init__.py  disprot_hgnc_ids.txt
src/indra_cogex/sources/: __init__.py  __main__.py  cellmarker.py  cli.py  processor.py  processor_util.py  utils.py
tests/: __init__.py  conftest.py  gene_analysis_data.csv  metabolite_analysis_integration_test.py  test_analysis_integration.py  test_assembly.py  test_autoclient.py  test_build.py  test_cbioportal.py  test_clinical_trials.csv  test_clinicaltrials.py  test_curation_cache.py  test_data_cna.txt  test_data_mutations_extended.txt  test_database.py  test_doubly_escaped_json_str.py  test_ec.py  test_enrichment_utils.py  test_gene_analysis.py  test_gene_analysis_integration.py  test_header_data_validation.py  test_header_validation.py  test_indra_db.py  test_mcp_pagination.py  test_metabolite_analysis.py  test_neo4j_client.py  test_odinson.py  test_processor.py  test_queries.py  test_representation.py  test_sanity.py  test_search_results.tsv  test_search_results.xml  test_search_results_2.tsv  test_search_results_4.xml  test_sqlite_cache.py  test_web_service_helpers.py  tets_metabolite_web_services.py
tests/apps/: __init__.py
tests/apps/mcp_server/: __init__.py  conftest.py  test_column_names_integration.py  test_cypher_execution.py  test_exploratory_workflows.py  test_gateway_tools.py  test_mcp_integration.py  test_schema_discovery.py  test_validation.py
tests/client/: __init__.py  test_enrichment_ora.py
tests/resources/: test_interpro_go.txt  test_interpro_protein.tsv  test_interpro_tree.txt
tests/test_sources/: __init__.py  test_clinicaltrials.py  test_interpro.py  test_source_import.py
(+189 files in other folders)
