[metadata]
name = indra_cogex
version = 1.0.0
description = INDRA Context Graph Extension
long_description = file: README.md
long_description_content_type = text/markdown

# Author Information
author = Benjamin M. Gyori
author_email = benjamin_gyori@hms.harvard.edu

# Project Information
url = https://github.com/indralab/indra_cogex
download_url = https://github.com/indralab/indra_cogex/releases

# License Information
license = BSD-2-Clause
license_file = LICENSE

classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
keywords =
    INDRA
    systems biology
    knowledge graphs

[options]
install_requires =
    indra @ git+https://github.com/sorgerlab/indra.git
    neo4j
    click
    more_click>=0.1.1
    class-resolver>=0.0.9
    pystow>=0.1.6
    bioregistry<0.5
    pyobo
    numpy
    scipy<1.8.0 # https://github.com/scipy/scipy/issues/16079
    statsmodels
    pandas
    python-dateutil

include_package_data = True
python_requires = >=3.7
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
tests =
    nose
assembly =
    gilda
    biomappings
web =
    flask
    flask-restx
    flask-wtf
    bootstrap-flask>=2.0.0
    flask_jwt_extended<4.0.0
    docstring-parser
    indralab_auth_tools @ git+https://github.com/indralab/ui_util.git#egg=indralab_auth_tools&subdirectory=indralab_auth_tools
    pusher
gunicorn =
    gunicorn
gsea =
    gseapy
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short

#######################
# isort Configuration #
#######################
[isort]
profile = black
multi_line_output = 3
include_trailing_comma = true
reverse_relative = true
