[metadata]
name = indra_cogex
version = 1.0.0
description = INDRA Context Graph Extension
long_description = file: README.md
long_description_content_type = text/markdown

# Author Information
author = Benjamin M. Gyori
author_email = benjamin_gyori@hms.harvard.edu

# Project Information
url = https://github.com/indralab/indra_cogex
download_url = https://github.com/indralab/indra_cogex/releases

# License Information
license = BSD-2-Clause
license_files = LICENSE

classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only
keywords =
    INDRA
    systems biology
    knowledge graphs

[options]
install_requires =
    indra @ git+https://github.com/gyorilab/indra.git
    neo4j
    click
    more_click>=0.1.1
    class-resolver>=0.0.9
    pystow>=0.1.6
    bioregistry>=0.9.62
    pyobo>=0.9.1,<0.10.3
    bioontologies<0.7
    numpy
    scipy
    statsmodels
    pandas
    python-dateutil

include_package_data = True
python_requires = >=3.10
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
assembly =
    gilda
    biomappings
    tqdm
    trialsynth @ git+https://github.com/gyorilab/trialsynth.git
    depmap_analysis @ git+https://github.com/gyorilab/depmap_analysis.git
web =
    flask
    flask-restx
    flask-wtf
    bootstrap-flask>=2.0.0
    flask_jwt_extended
    docstring-parser
    indralab_auth_tools @ git+https://github.com/gyorilab/ui_util.git#egg=indralab_auth_tools&subdirectory=indralab_auth_tools
    pusher
    markupsafe
gunicorn =
    gunicorn
gsea =
    gseapy
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short

#######################
# isort Configuration #
#######################
[isort]
profile = black
multi_line_output = 3
include_trailing_comma = true
reverse_relative = true
